Refactor profile endpoints, OpenId, Session
